# qxotic

./: .gitignore  README.md  docusaurus.config.ts  package.json  pom.xml
.github/workflows/: gguf-release.yml  jam-native-ci.yml  json-release.yml  safetensors-release.yml  toknroll-core-release.yml  toknroll-gguf-release.yml  toknroll-hf-release.yml
api/: pom.xml
deprecated/scratch/: pom.xml
deprecated/span/: pom.xml
docs/: index.md
docs/_theme/: custom.css  prism-gruvbox.ts
docs/gguf/: index.md
docs/json/: index.md
docs/safetensors/: index.md
docs/stylesheets/: gruvbox.css  landing.css  syntax.css
docs/toknroll/: core.md  gguf.md  hf.md  index.md
examples/: pom.xml
examples/scripts/: run-tokenizer-demo.sh
gguf/: AGENTS.md  README.md  mkdocs.yml  pom.xml
gguf/docs/: index.md
gguf/scripts/: PeekGGUF.java  gguf-metadata.java  gguf.java
huggingface/: pom.xml
jam/: .gitignore  CMakeLists.txt  PRECISION.md  README.md  build-and-test.sh  pom.xml
jam/.github/workflows/: build.yml
jam/build-asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  jam_test  libjam.so.1  libjam.so.1.0.0
jam/docs/: bench_plot.py
jam/graalvm-annotations/: pom.xml
jam/include/: jam.h
jam/jam-core/: pom.xml
jam/jam-core/src/main/java/com/qxotic/jam/: GGMLType.java  JAM.java
jam/jam-graal-stubs/: pom.xml
jam/jam-graal-stubs/src/main/java/com/oracle/svm/shared/: AlwaysInline.java
jam/jam-graalvm-stub/: pom.xml
jam/jam-native/: CMakeLists.txt  pom.xml
jam/jam-native/bench/: README.md  build-avx2.sh  build.sh  compile_flags.txt  jam_vs_tinyblas.c
jam/jam-native/cmake/cross-jni/win32/: jni_md.h
jam/jam-native/cmake/toolchains/: linux-aarch64.cmake  windows-aarch64.cmake  windows-x86-64.cmake
jam/jam-native/include/: jam.h
jam/jam-native/scripts/: build-jar.sh
jam/jam-native/src/: jam.c  jam_cpu.c  jam_cpu.h  jam_internal.h  jam_jni.c  jam_metal.mm  jam_pool.c
jam/jam-native/src/kernels/: jam_decode_x86_256.h  jam_gemm_neon.inc  jam_gemm_nvfp4_neon.inc  jam_gemm_q128_ssse3.inc  jam_gemm_q1_0_neon.inc  jam_kernels_avx2.c  jam_kernels_avx512.c  jam_kernels_avxvnni.c  jam_kernels_bf16_avx512bf16.c  jam_kernels_dotprod.c  jam_kernels_generic.c  jam_kernels_kquant_avx2.c  jam_kernels_kquant_sse3.c  jam_kernels_neon.c  jam_kernels_nvfp4_avx2.c  jam_kernels_q1_0_avx2.c  jam_kernels_q1_0_dotprod.c  jam_kernels_q1_0_neon.c  jam_kernels_q4k_avx512.c  jam_kernels_ssse3.c  jam_nvfp4.h  jam_q1_0.h
jam/jam-native/src/main/java/com/qxotic/jam/: NativeJAM.java  NativeLoader.java
jam/jam-native/src/test/java/com/qxotic/jam/: JamTest.java
jam/jam-native/tests/: jam_bench.c  jam_ref.h  jam_test.c
jam/jam-scalar/: pom.xml
jam/jam-scalar/src/main/java/com/qxotic/jam/: ScalarJAM.java
jam/jam-scalar/src/test/java/com/qxotic/jam/: ScalarJamTest.java
jam/jam-vector/: pom.xml
jam/jam-vector/src/main/java/com/oracle/svm/shared/: AlwaysInline.java
jam/jam-vector/src/main/java/com/qxotic/jam/: BandGemm.java  Mxfp4Kernel.java  Nvfp4Kernel.java  Q1Kernel.java  Q4KKernel.java  Q4Kernel.java  Q5KKernel.java  Q6KKernel.java  Q8Kernel.java  Scratch.java  VectorJAM.java  VectorSupport.java
jam/jam-vector/src/test/java/com/qxotic/jam/: JamBackendParityTest.java  QuantWeights.java  VectorKernelTest.java
jam/java/com/qxotic/jam/: GGMLType.java  JAM.java  NativeJAM.java  NativeLoader.java
jam/scripts/: build-jar.sh
jam/src/: jam.c  jam_decode_neon.h  jam_decode_x86_128.h  jam_fp16.h  jam_gemm_nvfp4_neon.inc  jam_internal.h  jam_jni.c  jam_kernels_avx2.c  jam_kernels_avx512.c  jam_kernels_avx512bw.c  jam_kernels_avxvnni.c  jam_kernels_dotprod.c  jam_kernels_generic.c  jam_kernels_i8mm.c  jam_kernels_kquant_avx2.c  jam_kernels_kquant_dotprod.c  jam_kernels_kquant_neon.c  jam_kernels_neon.c  jam_kernels_nvfp4_avx2.c  jam_kernels_nvfp4_neon.c  jam_kernels_q4k_avx512.c  jam_kquant.h  jam_kquant_engine.inc  jam_metal.mm  jam_mxfp4.h  jam_nvfp4.h  jam_q8_neon.inc
jam/src/kernels/: jam_gemm_q128.inc  jam_gemm_q256.inc  jam_kernels_avxvnni.c  jam_kernels_kquant_avx2.c  jam_kernels_nvfp4_dotprod.c  jam_kernels_sse3.c
jam/src/test/java/com/qxotic/jam/: JamTest.java
jam/tests/: jam_bench.c  jam_ref.h  jam_test.c
jinfer/: .gitignore  ARCHITECTURE.md  CacheStore.java  ChatFormat.java  Engine.java  Gguf.java  Grammar.java  JinjaRenderer.java  JsonCodec.java  Kernels.java  LFM25.java  LFMChatFormat.java  LFMTokenizer.java  Llama.java  Makefile  ModelLoader.java  Parallel.java  PromptCache.java  README.md  RuntimeFlags.java  Sampler.java  Server.java  Tensors.java  ToolCalls.java  gemm.metal  hotspot_compiler  jinferjni.c  lfm25jni.c  llm_prompt.txt  pom.xml
jinfer/bench/: BenchDecode.java  BenchPrefill.java  DeltaNetParity.java  DiagSpecial.java  SpinProbe.java
jinfer/buildtools/: JinferStaticGemmFeature.java  LFM25StaticGemmFeature.java
jinfer/examples/: GemmaVideo.java  GemmaVision.java  GemmaVisionMulti.java  README.md  gemma-budget-sweep.sh
jinfer/jinfer-bench/: pom.xml
jinfer/jinfer-chat/: pom.xml
jinfer/jinfer-core/: pom.xml
jinfer/jinfer-gemma4/: pom.xml  (+1 more)
jota/: AGENTS.md  BITACORA.md  README.md  kernels.cu  pom.xml
jota/jota-backend-c/src/main/native/: CMakeLists.txt
jota/jota-backend-cuda/src/main/native/: CMakeLists.txt  jota_cuda_jni.c
jota/jota-backend-mojo/src/main/native/: CMakeLists.txt  jota_mojo_jni.c
jota/jota-backend-mojo/src/main/native/mojo/: jota_mojo.h
jota/jota-backend-opencl/src/main/native/: CMakeLists.txt  jota_opencl_jni.c
jota/native/hip/: CMakeLists.txt  build.sh  jota_hip_jni.c  run_tests.sh
jota/src/main/native/metal/: CMakeLists.txt  jota_metal_jni.mm
json/: README.md  mkdocs.yml  pom.xml
safetensors/: README.md  mkdocs.yml  pom.xml
scratch/: pom.xml
span/: pom.xml
tokenizers/: README.md  generate-ground-truth.py  pom.xml
tokenizers-api/: pom.xml  run-benchmarks.sh
tokenizers-gguf/: README.md  pom.xml
tokenizers-hf/: pom.xml
toknroll/: README.md  benchmark_model_tokenizers.py  download-tiktoken.sh  generate-ground-truth.py  pom.xml  requirements.txt
(+3578 files in other folders)
