cmake_minimum_required(VERSION 3.21)

project(jota_cuda_jni LANGUAGES C)

if(APPLE)
  message(STATUS "CUDA backend is unsupported on macOS; skipping native target")
  return()
endif()

set(JOTA_JNI_INCLUDE_DIRS "")

if(DEFINED ENV{JAVA_HOME} AND EXISTS "$ENV{JAVA_HOME}/include/jni.h")
  list(APPEND JOTA_JNI_INCLUDE_DIRS "$ENV{JAVA_HOME}/include")
  if(WIN32)
    list(APPEND JOTA_JNI_INCLUDE_DIRS "$ENV{JAVA_HOME}/include/win32")
  elseif(APPLE)
    list(APPEND JOTA_JNI_INCLUDE_DIRS "$ENV{JAVA_HOME}/include/darwin")
  else()
    list(APPEND JOTA_JNI_INCLUDE_DIRS "$ENV{JAVA_HOME}/include/linux")
  endif()
endif()

if(NOT JOTA_JNI_INCLUDE_DIRS)
  find_package(JNI QUIET COMPONENTS JVM)
  if(JNI_FOUND)
    list(APPEND JOTA_JNI_INCLUDE_DIRS ${JNI_INCLUDE_DIRS})
  endif()
endif()

if(NOT JOTA_JNI_INCLUDE_DIRS)
  find_program(JOTA_JAVAC_EXECUTABLE javac)
  if(JOTA_JAVAC_EXECUTABLE)
    get_filename_component(JOTA_JAVAC_REALPATH "${JOTA_JAVAC_EXECUTABLE}" REALPATH)
    get_filename_component(JOTA_JAVA_BIN_DIR "${JOTA_JAVAC_REALPATH}" DIRECTORY)
    get_filename_component(JOTA_JAVA_HOME "${JOTA_JAVA_BIN_DIR}" DIRECTORY)
    if(EXISTS "${JOTA_JAVA_HOME}/include/jni.h")
      list(APPEND JOTA_JNI_INCLUDE_DIRS "${JOTA_JAVA_HOME}/include")
      if(WIN32)
        list(APPEND JOTA_JNI_INCLUDE_DIRS "${JOTA_JAVA_HOME}/include/win32")
      elseif(APPLE)
        list(APPEND JOTA_JNI_INCLUDE_DIRS "${JOTA_JAVA_HOME}/include/darwin")
      else()
        list(APPEND JOTA_JNI_INCLUDE_DIRS "${JOTA_JAVA_HOME}/include/linux")
      endif()
    endif()
  endif()
endif()

if(NOT JOTA_JNI_INCLUDE_DIRS)
  message(FATAL_ERROR "JNI headers not found. Set JAVA_HOME to a JDK root (with include/jni.h)")
endif()

find_package(CUDAToolkit REQUIRED)

add_library(jota_cuda SHARED jota_cuda_jni.c)

set(JOTA_CUDA_INCLUDE_DIRS "")
foreach(dir IN LISTS CUDAToolkit_INCLUDE_DIRS)
  if(EXISTS "${dir}")
    list(APPEND JOTA_CUDA_INCLUDE_DIRS "${dir}")
  else()
    message(WARNING "Ignoring non-existent CUDA include directory from toolkit metadata: ${dir}")
  endif()
endforeach()

set(JOTA_USE_IMPORTED_CUDA_TARGETS TRUE)
foreach(target_name IN ITEMS CUDA::cudart CUDA::cuda_driver)
  if(NOT TARGET ${target_name})
    set(JOTA_USE_IMPORTED_CUDA_TARGETS FALSE)
  endif()
endforeach()

if(JOTA_USE_IMPORTED_CUDA_TARGETS)
  foreach(target_name IN ITEMS CUDA::cudart CUDA::cuda_driver)
    get_target_property(target_includes ${target_name} INTERFACE_INCLUDE_DIRECTORIES)
    if(target_includes)
      foreach(dir IN LISTS target_includes)
        if(dir MATCHES "^\\$<")
          continue()
        endif()
        if(NOT EXISTS "${dir}")
          message(WARNING "CUDA imported target ${target_name} references missing include directory: ${dir}")
          set(JOTA_USE_IMPORTED_CUDA_TARGETS FALSE)
        endif()
      endforeach()
    endif()
  endforeach()
endif()

target_include_directories(jota_cuda PRIVATE ${JOTA_JNI_INCLUDE_DIRS} ${JOTA_CUDA_INCLUDE_DIRS})

if(JOTA_USE_IMPORTED_CUDA_TARGETS)
  target_link_libraries(jota_cuda PRIVATE CUDA::cudart CUDA::cuda_driver)
else()
  message(WARNING "Falling back to manual CUDA library discovery due to invalid imported targets")
  set(JOTA_CUDA_LIB_SEARCH_DIRS "")
  if(CUDAToolkit_LIBRARY_DIR)
    list(APPEND JOTA_CUDA_LIB_SEARCH_DIRS "${CUDAToolkit_LIBRARY_DIR}")
  endif()
  if(CUDAToolkit_LIBRARY_ROOT)
    list(APPEND JOTA_CUDA_LIB_SEARCH_DIRS
         "${CUDAToolkit_LIBRARY_ROOT}/lib"
         "${CUDAToolkit_LIBRARY_ROOT}/lib64"
         "${CUDAToolkit_LIBRARY_ROOT}/targets/x86_64-linux/lib"
         "${CUDAToolkit_LIBRARY_ROOT}/targets/x86_64-linux/lib/stubs")
  endif()

  find_library(JOTA_CUDART_LIBRARY NAMES cudart cudart_static HINTS ${JOTA_CUDA_LIB_SEARCH_DIRS})
  find_library(JOTA_CUDA_DRIVER_LIBRARY NAMES cuda nvcuda HINTS ${JOTA_CUDA_LIB_SEARCH_DIRS}
               PATHS /usr/lib/x86_64-linux-gnu /usr/lib64 /usr/lib/wsl/lib)

  if(NOT JOTA_CUDART_LIBRARY)
    message(FATAL_ERROR "Unable to locate CUDA runtime library (cudart). Check your CUDA toolkit install")
  endif()
  if(NOT JOTA_CUDA_DRIVER_LIBRARY)
    message(FATAL_ERROR "Unable to locate CUDA driver library (cuda/nvcuda). Check NVIDIA driver install")
  endif()

  target_link_libraries(jota_cuda PRIVATE ${JOTA_CUDART_LIBRARY} ${JOTA_CUDA_DRIVER_LIBRARY})
endif()

set_target_properties(jota_cuda PROPERTIES OUTPUT_NAME "jota_cuda")
